# private-finance

./: .gitignore  CHANGELOG.md  README.md  private-finance-plan-v2.md  run.ps1
backend/: pyproject.toml
backend/app/: audit.py  bootstrap.py  config.py  db.py  main.py  middleware.py  models.py  money.py  schemas.py  security.py  seed.py
backend/app/api/: __init__.py  accounts.py  aggregation.py  auth.py  categories.py  dependencies.py  imports.py  networth.py  operations.py  pdf_templates.py  review.py  rules.py  settings.py  transaction_helpers.py  transactions.py
backend/app/migrations/: __init__.py  m0001_baseline.py  m0002_session_reauthentication.py  m0003_pdf_extraction_templates.py
backend/app/services/: account_identifiers.py  accounts.py  aggregation.py  backups.py  (+23 more)
backend/tests/: test_account_identifiers.py  test_accounts.py  test_aggregation.py  test_backups.py  test_category_management.py  test_config.py  test_duplicate_scan.py  test_duplicates.py  test_fidelity.py  test_history_cleanup.py  test_history_rebuild.py  test_import_commit.py  test_import_inbox.py  test_importers.py  test_importers_ofx.py  test_manual_finance_entry.py  test_migrations.py  test_money.py  test_mutation_log.py  test_operation_history.py  test_pdf_teaching.py  test_reconciliation.py  test_refunds.py  test_reporting.py  test_rules.py  test_schema_validation.py  test_security_controls.py  test_settings_metadata.py  test_sign_profiles.py  test_snapshots.py  test_statement_pdf.py  test_transaction_bulk_update.py  test_transaction_filters.py  test_transfers.py  test_trash.py
(+101 files in other folders)
